--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -45,6 +45,8 @@
     <string name="copying_success_partial">Některé soubory nemohly být zkopírovány</string>
     <string name="no_files_selected">Žádné soubory vybrány</string>
     <string name="saving">Ukládám&#8230;</string>
+    <string name="could_not_create_folder">Could not create folder %s</string>
+    <string name="could_not_create_file">Could not create file %s</string>
 
     <!-- Create new -->
     <string name="create_new">Nový</string>
