--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -45,6 +45,8 @@
     <string name="copying_success_partial">Certains fichiers n\'ont pu être copiés</string>
     <string name="no_files_selected">Aucun fichier sélectionné</string>
     <string name="saving">Saving&#8230;</string>
+    <string name="could_not_create_folder">Could not create folder %s</string>
+    <string name="could_not_create_file">Could not create file %s</string>
 
     <!-- Create new -->
     <string name="create_new">Créer nouveau</string>
