--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -45,6 +45,8 @@
     <string name="copying_success_partial">Kai kurie failai negali bûti kopijuojami</string>
     <string name="no_files_selected">Nepasirinkti failai</string>
     <string name="saving">Iðsaugoma&#8230;</string>
+    <string name="could_not_create_folder">Could not create folder %s</string>
+    <string name="could_not_create_file">Could not create file %s</string>
 
     <!-- Create new -->
     <string name="create_new">Kurti naujà</string>
