--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -45,6 +45,8 @@
     <string name="copying_success_partial">部分檔案無法被複製</string>
     <string name="no_files_selected">未選擇檔案</string>
     <string name="saving">儲存中&#8230;</string>
+    <string name="could_not_create_folder">Could not create folder %s</string>
+    <string name="could_not_create_file">Could not create file %s</string>
 
     <!-- Create new -->
     <string name="create_new">新增</string>
