--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -213,7 +213,7 @@
     <string name="gruveo">Hľadáte aplikáciu na jednoduché a anonymné videohovory? Skúste môj druhý projekt</string>
     <string name="app_version">Verzia aplikácie: %1$s</string>
     <string name="device_os">Operačný systém zariadenia: %1$s</string>
-    <string name="donate_please">Čauko,\n\nzdá sa, že túto aplikáciu používaš už nejaký čas.\n\nVedel si, že nie je financovaná žiadnou veľkou firmou? Jej vývoj zaberá čas a nechcem pridávať reklamy, takže by tvoja pomoc bola vítaná.\n\nMôžeš ma podporiť jednak kúpou platenej aplikácie Simple Thank You, poslaním peňazí cez Paypal, alebo poslaním Bitcoinov.\n\nViac info na http://simplemobiletools.com/donate.\n\nĎakujem!</string>
+    <string name="donate_please">Čauko,\n\nzdá sa, že túto aplikáciu používaš už nejaký čas.\n\nVedel si, že nie je financovaná žiadnou veľkou firmou? Jej vývoj zaberá čas a nechcem pridávať reklamy, takže by tvoja pomoc bola vítaná.\n\nMôžeš ma podporiť jednak kúpou platenej aplikácie Simple Thank You, poslaním peňazí cez Paypal, alebo poslaním kryptomien.\n\nViac info na http://simplemobiletools.com/donate.\n\nĎakujem!</string>
 
     <!-- License -->
     <string name="notice">Táto aplikácia používa na uľahčenie práce nasledovné knižnice tretích strán. Ďakujeme.</string>
