--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -7,6 +7,7 @@
     <string name="invalid_file_format">Formato file non valido</string>
     <string name="no_storage_permissions">È necessaria l\'autorizzazione per l\'accesso all\'archiviazione</string>
     <string name="out_of_memory_error">Errore memoria esaurita</string>
+    <string name="an_error_occurred">Si è verificato un errore: %s</string>
 
     <!-- Renaming -->
     <string name="rename_file">Rinomina file</string>
