--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -7,6 +7,7 @@
     <string name="invalid_file_format">Neplatný formát súboru</string>
     <string name="no_storage_permissions">Je potrebný prístup k súborom</string>
     <string name="out_of_memory_error">Došlo k chybe s nedostatkom pamäte</string>
+    <string name="an_error_occurred">Došlo k chybe: %s</string>
 
     <!-- Renaming -->
     <string name="rename_file">Premenovať súbor</string>
