--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -7,6 +7,7 @@
     <string name="invalid_file_format">Invalid file format</string>
     <string name="no_storage_permissions">We need the permission to access your storage</string>
     <string name="out_of_memory_error">Out of memory error</string>
+    <string name="an_error_occurred">An error occurred: %s</string>
 
     <!-- Renaming -->
     <string name="rename_file">ファイルの名前を変更</string>
