--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -7,6 +7,7 @@
     <string name="invalid_file_format">Neteisingas failo formatas</string>
     <string name="no_storage_permissions">Reikalingas leidimas pasiekti saugyklà</string>
     <string name="out_of_memory_error">Klaida: trûksta atminties</string>
+    <string name="an_error_occurred">Klaida: %s</string>
 
     <!-- Renaming -->
     <string name="rename_file">Pervadinti failà</string>
