--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -7,6 +7,7 @@
     <string name="invalid_file_format">Nieprawidłowy format pliku</string>
     <string name="no_storage_permissions">Aby mieć dostęp do plików, potrzebuję uprawnień</string>
     <string name="out_of_memory_error">Błąd pamięci</string>
+    <string name="an_error_occurred">Wystąpił błąd: %s</string>
 
     <!-- Renaming -->
     <string name="rename_file">Zmień nazwę</string>
