--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -7,6 +7,7 @@
     <string name="invalid_file_format">Formato de ficheiro inválido</string>
     <string name="no_storage_permissions">Necessitamos de permissão para aceder ao armazenamento</string>
     <string name="out_of_memory_error">Memória insuficiente</string>
+    <string name="an_error_occurred">An error occurred: %s</string>
 
     <!-- Renaming -->
     <string name="rename_file">Renomear ficheiro</string>
