--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -7,6 +7,7 @@
     <string name="invalid_file_format">Invalid file format</string>
     <string name="no_storage_permissions">We need the permission to access your storage</string>
     <string name="out_of_memory_error">Yetersiz bellek hatası</string>
+    <string name="an_error_occurred">Bir hata oluştu: %s</string>
 
     <!-- Renaming -->
     <string name="rename_file">Dosyayı yeniden adlandır</string>
