--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -7,6 +7,7 @@
     <string name="invalid_file_format">無效的檔案格式</string>
     <string name="no_storage_permissions">我們需要權限來存取您的儲存空間</string>
     <string name="out_of_memory_error">記憶體不足</string>
+    <string name="an_error_occurred">An error occurred: %s</string>
 
     <!-- Renaming -->
     <string name="rename_file">重新命名檔案</string>
