--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -7,7 +7,7 @@
     <string name="invalid_file_format">無效的檔案格式</string>
     <string name="no_storage_permissions">我們需要權限來存取您的儲存空間</string>
     <string name="out_of_memory_error">記憶體不足</string>
-    <string name="an_error_occurred">An error occurred: %s</string>
+    <string name="an_error_occurred">發生錯誤: %s</string>
 
     <!-- Renaming -->
     <string name="rename_file">重新命名檔案</string>
@@ -46,8 +46,8 @@
     <string name="copying_success_partial">部分檔案無法被複製</string>
     <string name="no_files_selected">未選擇檔案</string>
     <string name="saving">儲存中&#8230;</string>
-    <string name="could_not_create_folder">Could not create folder %s</string>
-    <string name="could_not_create_file">Could not create file %s</string>
+    <string name="could_not_create_folder">無法創建資料夾 %s</string>
+    <string name="could_not_create_file">無法創建檔案 %s</string>
 
     <!-- Create new -->
     <string name="create_new">新增</string>
@@ -165,7 +165,7 @@
     <string name="insert_pattern">畫出解鎖圖形</string>
     <string name="wrong_pattern">解鎖圖形錯誤</string>
     <string name="repeat_pattern">再次畫出解鎖圖形</string>
-    <string name="protection_setup_successfully">Password setup successfully. Please reinstall the app in case you forget it.</string>
+    <string name="protection_setup_successfully">密碼設置成功。若遺忘了請重新安裝此程式。</string>
 
     <!-- Times -->
     <plurals name="seconds">
